--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
+    "react-table": "^7.8.0",
     "xtypejs": "^0.7.1"
   },
   "devDependencies": {
