--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook":"start-storybook -p 6006",
+    "build-storybook" : "build-storybook"
   },
   "dependencies": {
     "axios": "^0.27.2",
